--- a/client/package.json
+++ b/client/package.json
@@ -59,6 +59,7 @@
     "clsx": "^1.2.1",
     "copy-to-clipboard": "^3.3.3",
     "cross-env": "^7.0.3",
+    "crypto-js": "^4.2.0",
     "date-fns": "^3.3.1",
     "downloadjs": "^1.4.7",
     "export-from-json": "^1.7.2",
