--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,10 +13,11 @@ build-job:
   stage: build
   script:
     - echo "$CI_REGISTRY_PASSWORD" | docker login $CI_REGISTRY -u $CI_REGISTRY_USER --password-stdin
+    - export IMAGE_TAG="${CI_REGISTRY}/${IMAGE_NAME}"
     - > 
       docker buildx build
-      --tag "${IMAGE_NAME}:${IMAGE_VER}"
-      --tag "${IMAGE_NAME}:latest"
+      --tag "${IMAGE_TAG}:${IMAGE_VER}"
+      --tag "${IMAGE_TAG}:latest"
       --push
       --platform linux/amd64
       --target ${BUILD_TARGET}
